@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Dynamic negotiation of SOP classes for C-Store SCU
+* Fix missing licensing terms about reuse of some DCMTK code
 
 
 Version 0.7.4 (2014/04/16)
